--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ button:disabled {
   color: #00bfff;
 }
 </style>
-</head>
+
 <body>
 
 <header>
@@ -85,6 +85,7 @@ button:disabled {
 <header>
   <h1>Scroll down to get link</h1>
 </header>
+  <script type='text/javascript' src='//pl27798641.revenuecpmgate.com/24/44/55/2444556bdaacd8e60cd1c3277d0094a4.js'></script>
 <section>
   <h2>🔥 Trending Movies</h2>
   <div class="movie-grid">
@@ -105,6 +106,8 @@ button:disabled {
       <h3>Spider-Man: Across the Spider-Verse</h3>
     </div>
   </div>
+  <script async="async" data-cfasync="false" src="//pl27798662.revenuecpmgate.com/5c3c314ffb9a05c9b94dc476f0b568a1/invoke.js"></script>
+<div id="container-5c3c314ffb9a05c9b94dc476f0b568a1"></div>
 </section>
 
 <section class="article">
@@ -114,18 +117,58 @@ button:disabled {
     From Hollywood blockbusters to indie films, we bring everything you love about cinema in one place.
     Scroll below to unlock access to our exclusive content and the latest releases.
   </p>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '9a55f20dd35d3466330fa6b8a56efaf9',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/9a55f20dd35d3466330fa6b8a56efaf9/invoke.js"></script>
   <p>
     Our movie experts curate reviews, behind-the-scenes interviews, and sneak peeks of upcoming films.
     Whether you’re a fan of Marvel superheroes or classic dramas, CineZone keeps you updated 24×7.
   </p>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '3d0218bfe5728a5e7d0b4f2746e1e3f8',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/3d0218bfe5728a5e7d0b4f2746e1e3f8/invoke.js"></script>
 </section>
 
 <div class="bottom">
   <h3>Scroll down and wait 10 seconds to continue</h3>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '0b42193795d158813a2cd0a03eac4a78',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/0b42193795d158813a2cd0a03eac4a78/invoke.js"></script>
   <div class="timer">⏱ Wait: <span id="count">10</span>s</div>
   <button id="nextBtn" disabled>Continue to Step 2</button>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : 'c9a9823f757ee2084c30bcf46a0d3eba',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c9a9823f757ee2084c30bcf46a0d3eba/invoke.js"></script>
 </div>
-
+</head>
 <script>
 let started = false;
 window.addEventListener("scroll", () => {
@@ -150,5 +193,6 @@ function startTimer() {
   }, 1000);
 }
 </script>
+  <script type='text/javascript' src='//pl27798674.revenuecpmgate.com/0c/8f/03/0c8f03ace71f98706fe7066ba02056d6.js'></script>
 </body>
 </html>
