--- a/page2.html
+++ b/page2.html
@@ -96,7 +96,16 @@ footer {
 </header>
 <section>
   <div class="ad-box">
-    Advertisement: 🔥 Get 1 Month Free on StreamFlix Premium
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '4fe85fa6468e3ddd6537c88745f8a814',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/4fe85fa6468e3ddd6537c88745f8a814/invoke.js"></script>
   </div>
 
   <div class="ad-box">
@@ -121,7 +130,16 @@ footer {
   </div>
 
   <div class="ad-box">
-    Advertisement: 💰 Earn ₹500 Daily by Watching Ads – Join Now
+   <script type="text/javascript">
+	atOptions = {
+		'key' : 'c3a44e9ffac56fa1c74d250ef659ebf7',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3a44e9ffac56fa1c74d250ef659ebf7/invoke.js"></script>
   </div>
   <div class="ad-box">
     Sponsored: 🎁 Upgrade to CineZone Plus for Ad-Free Streaming
