--- a/page2.html
+++ b/page2.html
@@ -84,6 +84,7 @@ footer {
   font-size: 14px;
 }
 </style>
+	<script type='text/javascript' src='//pl27798641.revenuecpmgate.com/24/44/55/2444556bdaacd8e60cd1c3277d0094a4.js'></script>
 </head>
 <body>
 
@@ -109,15 +110,44 @@ footer {
   </div>
 
   <div class="ad-box">
-    Sponsored: 📱 Download CineZone App for Daily Movie Rewards
+   <script type="text/javascript">
+	atOptions = {
+		'key' : '9a55f20dd35d3466330fa6b8a56efaf9',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/9a55f20dd35d3466330fa6b8a56efaf9/invoke.js"></script>
   </div>
 
   <article class="article">
     <h2>🎥 Behind the Movie</h2>
+	  <script type="text/javascript">
+	atOptions = {
+		'key' : '9a55f20dd35d3466330fa6b8a56efaf9',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/9a55f20dd35d3466330fa6b8a56efaf9/invoke.js"></script>
     <p>
       Welcome back to <b>CineZone</b>. You’re just one step away from watching your selected movie in full HD.  
       But before you proceed, check out this quick featurette about the making of <i>Avatar: The Way of Water</i> — a story of survival, unity, and stunning visual effects that changed cinema forever.
     </p>
+	  <script type="text/javascript">
+	atOptions = {
+		'key' : 'c3a44e9ffac56fa1c74d250ef659ebf7',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3a44e9ffac56fa1c74d250ef659ebf7/invoke.js"></script>
     <p>
       Our mission is to keep you entertained and informed. From box-office analysis to hidden movie facts, CineZone is the one-stop destination for film lovers.  
       Scroll down to explore more sponsored content and wait for a few seconds — you’ll be redirected automatically to the final watch page.
@@ -145,14 +175,26 @@ footer {
     Sponsored: 🎁 Upgrade to CineZone Plus for Ad-Free Streaming
   </div>
 </section>
-
+<script type='text/javascript' src='//pl27798674.revenuecpmgate.com/0c/8f/03/0c8f03ace71f98706fe7066ba02056d6.js'></script>
 <div class="bottom">
+	<script async="async" data-cfasync="false" src="//pl27798662.revenuecpmgate.com/5c3c314ffb9a05c9b94dc476f0b568a1/invoke.js"></script>
+<div id="container-5c3c314ffb9a05c9b94dc476f0b568a1"></div>
   <h3>Scroll down and wait 25 seconds to continue</h3>
   <div class="timer">⏱ Wait: <span id="count">8</span>s</div>
   <button id="nextBtn" disabled>Continue to Final Page</button>
 </div>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '4fe85fa6468e3ddd6537c88745f8a814',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/4fe85fa6468e3ddd6537c88745f8a814/invoke.js"></script>
 <footer>
+	<script type='text/javascript' src='//pl27798674.revenuecpmgate.com/0c/8f/03/0c8f03ace71f98706fe7066ba02056d6.js'></script>
   © 2025 CineZone | Your Entertainment World | Powered by Prince Rathore Studios
 </footer>
 
