--- a/final.html
+++ b/final.html
@@ -115,6 +115,16 @@ footer {
 <header>
   <h1>🍿 CineZone Movie Player</h1>
   <p>HD Streaming | Ad Supported | Free Access</p>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '3d0218bfe5728a5e7d0b4f2746e1e3f8',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/3d0218bfe5728a5e7d0b4f2746e1e3f8/invoke.js"></script>
 </header>
 
 <!-- 🔹 Top Banner Ad -->
@@ -131,9 +141,27 @@ footer {
     <!-- 🔸 Ad before video -->
     <div class="adbox">
       <p>Sponsored Ad</p>
-      <iframe src="https://example.com/ad-before.html"></iframe>
+     <script type="text/javascript">
+	atOptions = {
+		'key' : '9a55f20dd35d3466330fa6b8a56efaf9',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/9a55f20dd35d3466330fa6b8a56efaf9/invoke.js"></script>
     </div>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'c3a44e9ffac56fa1c74d250ef659ebf7',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/c3a44e9ffac56fa1c74d250ef659ebf7/invoke.js"></script>
     <!-- 🎥 Movie Player -->
     <video controls poster="https://m.media-amazon.com/images/I/81J8V1o7IPL._AC_SL1500_.jpg">
       <source src="movie.mp4" type="video/mp4" />
@@ -148,8 +176,18 @@ footer {
       </p>
 
       <div class="adbox" style="margin:20px 0;">
-        <p>Advertisement (Mid Content)</p>
-        <iframe src="https://example.com/ad-mid.html"></iframe>
+        <p>Advertisement </p>
+      <script type='text/javascript' src='//pl27798641.revenuecpmgate.com/24/44/55/2444556bdaacd8e60cd1c3277d0094a4.js'></script>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '4fe85fa6468e3ddd6537c88745f8a814',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/4fe85fa6468e3ddd6537c88745f8a814/invoke.js"></script>
       </div>
 
       <p>
@@ -157,7 +195,7 @@ footer {
       </p>
     </div>
   </div>
-
+<a href="https://www.revenuecpmgate.com/q7gf48mc?key=8906c10ca3681260deaea4b5a38162e4">
   <!-- Right Sidebar: Ads -->
   <div class="sidebar">
     <div class="adbox">
@@ -178,11 +216,24 @@ footer {
 <!-- 🔹 Footer Ad -->
 <div class="adbox large-ad" style="margin: 20px auto; max-width: 900px;">
   <p>Advertisement (Footer Banner)</p>
-  <iframe src="https://example.com/ad-footer.html"></iframe>
+  <script async="async" data-cfasync="false" src="//pl27798662.revenuecpmgate.com/5c3c314ffb9a05c9b94dc476f0b568a1/invoke.js"></script>
+<div id="container-5c3c314ffb9a05c9b94dc476f0b568a1"></div>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '4fe85fa6468e3ddd6537c88745f8a814',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/4fe85fa6468e3ddd6537c88745f8a814/invoke.js"></script>
 </div>
 
 <footer>
   <p>© 2025 CineZone. Watch movies online with ad support. All rights reserved.</p>
+  <script async="async" data-cfasync="false" src="//pl27798662.revenuecpmgate.com/5c3c314ffb9a05c9b94dc476f0b568a1/invoke.js"></script>
+<div id="container-5c3c314ffb9a05c9b94dc476f0b568a1"></div>
 </footer>
 </body>
 </html>
