--- a/final.html
+++ b/final.html
@@ -33,6 +33,13 @@ header h1 {
   gap: 20px;
   padding: 20px;
 }
+	.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
 
 /* Left (Movie Section) */
 .content {
@@ -195,7 +202,7 @@ footer {
       </p>
     </div>
   </div>
-<a href="https://www.revenuecpmgate.com/q7gf48mc?key=8906c10ca3681260deaea4b5a38162e4">
+<a href="https://www.revenuecpmgate.com/q7gf48mc?key=8906c10ca3681260deaea4b5a38162e4">click to download</a>
   <!-- Right Sidebar: Ads -->
   <div class="sidebar">
     <div class="adbox">
@@ -229,7 +236,11 @@ footer {
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/4fe85fa6468e3ddd6537c88745f8a814/invoke.js"></script>
 </div>
-
+<center><div class="container">
+	<h2>Download Jolly LLB 3 [2025] in HD</h2>
+	<a href="">Download [server 1]</a>
+	<a href="">Download [server 1]</a>
+</div></center>
 <footer>
   <p>© 2025 CineZone. Watch movies online with ad support. All rights reserved.</p>
   <script async="async" data-cfasync="false" src="//pl27798662.revenuecpmgate.com/5c3c314ffb9a05c9b94dc476f0b568a1/invoke.js"></script>
