--- a/final.html
+++ b/final.html
@@ -34,11 +34,11 @@ header h1 {
   padding: 20px;
 }
 	.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
+  flex: 1 1 700px;
+  background: rgba(255,255,255,0.05);
+  border-radius: 15px;
   padding: 20px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.4);
 }
 
 /* Left (Movie Section) */
@@ -137,7 +137,16 @@ footer {
 <!-- 🔹 Top Banner Ad -->
 <div class="adbox large-ad" style="margin: 20px auto; max-width: 900px;">
   <p>Advertisement (Top Banner)</p>
-  <iframe src="https://example.com/ad-top.html"></iframe>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '3d0218bfe5728a5e7d0b4f2746e1e3f8',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/3d0218bfe5728a5e7d0b4f2746e1e3f8/invoke.js"></script>
 </div>
 
 <div class="main">
@@ -207,7 +216,16 @@ footer {
   <div class="sidebar">
     <div class="adbox">
       <p>Sponsored Banner</p>
-      <iframe src="https://example.com/ad-side1.html"></iframe>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '3d0218bfe5728a5e7d0b4f2746e1e3f8',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/3d0218bfe5728a5e7d0b4f2746e1e3f8/invoke.js"></script>
     </div>
     <div class="adbox">
       <p>Exclusive Offer</p>
